# LabDabbler

./: .env.production.template  .replit  PRODUCTION_DEPLOYMENT.md  README.md  README_PRODUCTION.md  docker-compose.production.yml  package-lock.json  package.json  pyproject.toml  replit.md
.devcontainer/: devcontainer.json  docker-compose.yml  setup.sh
.github/codespaces/: devcontainer.json
.github/workflows/: codespaces-prebuilds.yml  containerlab-ci.yml
attached_assets/: Pasted-Lets-try-this-again-I-need-you-to-review-this-entire-conversation-as-you-are-clearly-just-not-able--1757541775939_1757541775940.txt  Pasted-Recommended-Path-for-Seamless-Automation-of-Containerlab-Topologies-with-a-Web-Interface-To-achieve-1757694653574_1757694653575.txt
config/: production.yaml
data/: containers.json  github_labs.json  repositories_config.json  repositories_metadata.json
docs/: CODESPACES_SETUP.md
labs/network/basic/: 3-node-spine-leaf.clab.yml  (+3 more)
logging/: fluent.conf
monitoring/: prometheus.yml
nginx/: nginx.conf
nginx/conf.d/: labdabbler.conf
postgres/: backup.sh  postgresql.conf
postgres/init/: 01-init-database.sql
redis/: redis.conf
scripts/: deploy.sh  monitoring.sh  test-production.sh  update.sh
ssl/: generate-certs.sh  letsencrypt-setup.sh
web/backend/: .dockerignore  Dockerfile  app.py  app_production.py  pyproject.toml  test_codespaces_integration.py  test_nokia_sros_templates.py  test_sample_topologies.py
web/frontend/: .env.production  Dockerfile  index.html  nginx-site.conf  nginx.conf  package.json  vite.config.js
(+71 files in other folders)
