[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "aioredis>=2.0.1",
    "apscheduler>=3.11.0",
    "asyncssh>=2.21.0",
    "cryptography>=45.0.7",
    "docker>=7.1.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "netlab>=0.0.0a0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
